--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   svg_flutter: ^0.0.1
   dots_indicator: ^3.0.0
   shared_preferences: ^2.2.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
