login and sign up done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dots_indicator: ^3.0.0
   shared_preferences: ^2.2.3
   intl: ^0.18.1
+  firebase_core: ^2.27.0
+  dartz: ^0.10.1
+  firebase_auth: ^4.17.8
 
 dev_dependencies:
   flutter_test:
